// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toc component should render correctly 1`] = `
<div>
  <ol
    class="Toc"
  >
    <li
      class="Toc-item"
    >
      <a
        class="Toc-itemLink"
        href="#"
      >
        <span
          class="Toc-itemTitle"
        >
          title
        </span>
      </a>
    </li>
  </ol>
</div>
`;

exports[`Toc component should render date correctly 1`] = `
<div>
  <ol
    class="Toc"
  >
    <li
      class="Toc-item"
    >
      <a
        class="Toc-itemLink"
        href="#"
      >
        <span
          class="Toc-itemTitle"
        >
          title
        </span>
        <span
          class="Toc-itemDate"
        >
          2018-11-15
        </span>
      </a>
    </li>
  </ol>
</div>
`;

exports[`Toc component should render slug correctly 1`] = `
<div>
  <ol
    class="Toc"
  >
    <li
      class="Toc-item"
    >
      <a
        class="Toc-itemLink"
      >
        <span
          class="Toc-itemTitle"
        >
          title
        </span>
      </a>
    </li>
  </ol>
</div>
`;
